[gd_scene load_steps=4 format=3 uid="uid://ctyhqqwexg434"]

[ext_resource type="Script" path="res://UI/LanguageOptionButton.gd" id="1"]
[ext_resource type="Script" path="res://UI/Settings.gd" id="2"]
[ext_resource type="FontFile" path="res://UI/font.tres" id="3"]

[node name="SettingsWindowDialog" type="Window"]
title = "Settings"
initial_position = 1
size = Vector2i(325, 220)
unresizable = true
min_size = Vector2i(325, 212)
theme_override_fonts/title_font = ExtResource("3")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="LanguageGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LanguageLabel" type="Label" parent="VBoxContainer/LanguageGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3")
text = "Language"

[node name="LanguageOptionButton" type="OptionButton" parent="VBoxContainer/LanguageGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RPCGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="RPCHostLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3")
text = "RPC Host"

[node name="RPCHostLineEdit" type="LineEdit" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RPCPortLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3")
text = "RPC Port"

[node name="RPCPortSpinBox" type="SpinBox" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 65535.0

[node name="RPCPathLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3")
text = "RPC Path3D"

[node name="RPCPathLineEdit" type="LineEdit" parent="VBoxContainer/RPCGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "RPC User and Password"

[node name="RPCCredentialsGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="UserLineEdit" type="LineEdit" parent="VBoxContainer/RPCCredentialsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PassLineEdit2" type="LineEdit" parent="VBoxContainer/RPCCredentialsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[connection signal="about_to_popup" from="." to="." method="_on_SettingsWindowDialog_about_to_show"]
[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="item_selected" from="VBoxContainer/LanguageGridContainer/LanguageOptionButton" to="VBoxContainer/LanguageGridContainer/LanguageOptionButton" method="_on_item_selected"]
